syntax = "proto3";

option go_package = "genproto/product";

package product;

message GetById{
    string id = 1;
}

message Empty{}

message Filter {
    int32 limit = 1;
    int32 offset = 2;
}